# sipstuff-k8s-operator

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CLAUDE.md  DOCKERHUB_OVERVIEW.md  Dockerfile  Makefile  README.md  kubectlstuff_flickr_downloader.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: buildmultiarchandpush.yml  checkblack.yml  mypynpytests.yml  update-clone-badge.yml
k8s/: deployment.yaml  namespace.yaml  rbac.yaml  secret.yaml.example  service.yaml
repo_scripts/: blurimage.py  build-container-multiarch.sh  dh_login.py  include.sh  initial_setup_github_dockerhub.sh  update_badge.py
sipstuff_k8s_operator/: __init__.py  __main__.py  api.py  config.py  job_builder.py  models.py  operator.py
tests/: __init__.py  test_base.py
